Enable checkstyle/spotbugs for example module